revision to wesite format, logo included

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
     - index.qmd
     - how-to.qmd
     - db-main.qmd
+    - db-taxa.qmd
 
 website:
   title: "Database Darkly"
@@ -15,7 +16,9 @@ website:
       - href: how-to.qmd
         text: How to use
       - href: db-main.qmd
-        text: Database
+        text: Database curation
+      - href: db-taxa.qmd
+        text: Summary of database
 
 format:
   html:
